--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,51 +1,77 @@
 .login-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    padding: 0 0 0 0;
+    background-image: url(../imagenes/fondologin.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
   }
   
   .login-form {
-    background-color: white;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
+      display: flex;
+      flex-direction: column;
+      background-color: black;
+      height: 100%;
+      width: 32%;
   }
   
   .login-form h1 {
-    text-align: center;
-    margin-bottom: 1.5rem;
+      color: #fff;
+      font-size: 30px;
+      display: flex;
+      justify-content: center;
+      padding: 0 0 15px 0;
+      margin: 20px;
+      margin-top: 35%;
   }
   
   .login-form label {
     display: block;
     margin-bottom: 0.5rem;
     font-weight: bold;
+    color: #fff;
+    margin: 20px;
   }
   
   .login-form input {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 1rem;
+      height: 45px;
+      width: 87%;
+      border: none;
+      outline: none;
+      color: #fff;
+      border-radius: 30px;
+      padding: 0 0 0 42px;
+      background: rgba(255, 255, 255, 0.123);
   }
   
   .login-form button {
-    display: block;
-    width: 100%;
-    padding: 0.75rem 1rem;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1rem;
+      border: none;
+      border-radius: 30px;
+      font-size: 15px;
+      height: 45px;
+      outline: none;
+      width: 90%;
+      cursor: pointer;
+      transition: .3s;
+      margin-top: 30px;
+      margin-left: 20px;
   }
   
   .login-form button:hover {
-    background-color: #0056b3;
+    box-shadow: 1px 5px 7px 1px rgba(255, 255, 255, 0.2);
+  }
+
+  .login-footer {
+    width: 100%;
+    padding: 10px;
+  }
+  
+  .login-footer p{
+    color: #fff;
+    font-size: 15px;
+    padding: 20px;
   }
