--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,77 +1,90 @@
 .login-container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100vh;
-    padding: 0 0 0 0;
-    background-image: url(../imagenes/fondologin.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-  }
-  
-  .login-form {
-      display: flex;
-      flex-direction: column;
-      background-color: black;
-      height: 100%;
-      width: 32%;
-  }
-  
-  .login-form h1 {
-      color: #fff;
-      font-size: 30px;
-      display: flex;
-      justify-content: center;
-      padding: 0 0 15px 0;
-      margin: 20px;
-      margin-top: 35%;
-  }
-  
-  .login-form label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-    color: #fff;
-    margin: 20px;
-  }
-  
-  .login-form input {
-      height: 45px;
-      width: 87%;
-      border: none;
-      outline: none;
-      color: #fff;
-      border-radius: 30px;
-      padding: 0 0 0 42px;
-      background: rgba(255, 255, 255, 0.123);
-  }
-  
-  .login-form button {
-      border: none;
-      border-radius: 30px;
-      font-size: 15px;
-      height: 45px;
-      outline: none;
-      width: 90%;
-      cursor: pointer;
-      transition: .3s;
-      margin-top: 30px;
-      margin-left: 20px;
-  }
-  
-  .login-form button:hover {
-    box-shadow: 1px 5px 7px 1px rgba(255, 255, 255, 0.2);
-  }
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  padding: 0 0 0 0;
+  background-image: url(../imagenes/logo.svg);
+  background-size: 25%;
+  background-repeat: repeat;
+  background-position:2%;
+  background-attachment: fixed;
+}
 
-  .login-footer {
-    width: 100%;
-    padding: 10px;
-  }
-  
-  .login-footer p{
-    color: #fff;
-    font-size: 15px;
-    padding: 20px;
-  }
+.login-form {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  height: 100%;
+  width: 32%;
+  box-shadow: 1px 15px 15px 0.5rem rgba(17, 17, 17, 0.925);
+}
+
+.login-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding-top: 2rem;
+}
+
+.login-form h1 {
+  color: #fff;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-top: 27%;
+}
+
+.login-form label {
+  display: block;
+  width: 80%;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #fff;
+  margin: auto;
+}
+
+.login-form input {
+  height: 2.5rem;
+  width: 87%;
+  padding: 0 1rem;
+  margin-top: 0.5rem;
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 2rem;;
+  background: rgba(255, 255, 255, 0.123);
+}
+
+.login-form button {
+  border: none;
+  border-radius: 2rem;
+  font-size: medium;
+  height: 3rem;
+  outline: none;
+  width: 90%;
+  cursor: pointer;
+  transition: .3s;
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+}
+
+.login-form button:hover {
+  background-color: rgba(200, 144, 253, 0.747);
+  color: azure;
+  box-shadow: 1px 5px 7px 1px rgba(255, 255, 255, 0.5);
+}
+
+.login-footer {
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+}
+
+.login-footer p {
+  color: #fff;
+  font-size: medium;
+  padding: 1.5rem;
+}
