--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -4,74 +4,106 @@
   align-items: center;
   height: 100vh;
   padding: 0 0 0 0;
-  background-image: url(../imagenes/fondologin.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-image: url(../imagenes/logo.svg);
+  background-size: 25%;
+  background-repeat: repeat;
+  background-position: 2%;
   background-attachment: fixed;
-  }
-  
-  .register-form {
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    height: 100%;
-    width: 32%;
-  }
-  
-  .register-form h1 {
-    color: #fff;
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    padding: 0 0 15px 0;
-    margin: 20px;
-    margin-top: 27%;
-  }
-  
-  .register-form label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-    color: #fff;
-    margin: 20px;
-  }
-  
-  .register-form input {
-    height: 45px;
-    width: 87%;
-    border: none;
-    outline: none;
-    color: #fff;
-    border-radius: 30px;
-    padding: 0 0 0 42px;
-    background: rgba(255, 255, 255, 0.123);
-  }
-  
-  .register-form button {
-    border: none;
-    border-radius: 30px;
-    font-size: 15px;
-    height: 45px;
-    outline: none;
-    width: 90%;
-    cursor: pointer;
-    transition: .3s;
-    margin-top: 30px;
-    margin-left: 20px;
-  }
-  
-  .register-form button:hover {
-    box-shadow: 1px 5px 7px 1px rgba(255, 255, 255, 0.2);
-  }
+}
 
-  .register-footer {
-    width: 100%;
-    padding: 10px;
+.register-form {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  height: 100%;
+  width: 32%;
+  box-shadow: 1px 15px 15px 0.5rem rgba(17, 17, 17, 0.925);
+}
+
+.register-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.register-form h1 {
+  color: #fff;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-top: 27%;
+}
+
+.register-form label {
+  display: block;
+  width: 80%;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #fff;
+  margin: auto;
+}
+
+.register-form input {
+  height: 2.5rem;
+  width: 87%;
+  padding: 0 1rem;
+  margin-top: 0.5rem;
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 2rem;
+  background: rgba(255, 255, 255, 0.123);
+}
+
+.register-form fieldset {
+  display: flex;
+  justify-content: left;
+  gap: 1rem;
+  width: 80%;
+  margin: 0.5rem auto;
+  border: none;
+  padding: 0;
+
+  .radiobutton-container {
+    display: flex;
+    font-size: medium;
+    align-items: center;
+
+    input {
+      height: 1.5rem;
+      margin: 0;
+    }
   }
-  
-  .register-footer p {
-    color: #fff;
-    font-size: 15px;
-    padding: 20px;
-  }
+}
+
+.register-form button {
+  border: none;
+  border-radius: 2rem;
+  font-size: medium;
+  height: 3rem;
+  outline: none;
+  width: 90%;
+  cursor: pointer;
+  transition: .3s;
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+}
+
+.register-form button:hover {
+  background-color: rgba(200, 144, 253, 0.747);
+  color: azure;
+  box-shadow: 1px 5px 7px 1px rgba(255, 255, 255, 0.5);
+}
+
+.register-footer {
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+}
+
+.register-footer p {
+  color: #fff;
+  font-size: medium;
+  padding: 1.5rem;
+}
