--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -57,13 +57,42 @@
     text-decoration: underline;
 }
 
-#carrito-icono {
-    width: 2.5rem;
-    height: 2.5rem;
+#Icono-carrito {
+    width: 2rem;
+    height: 2rem;
 }
+
 #carrito-link {
     margin-top: -5px; /* Ajusta el margen superior según sea necesario */
 }
+
+.PopOverContent{
+    max-width: 50rem;
+    max-height: 50rem;
+    border: 2px solid black;
+    border-radius: 6px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0,5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.ExitPopover{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 35px;
+    background-color: #658e14;
+}
+
+.FinalizarCompra{
+    margin: 7px;
+    background-color: #658e14;
+    color: #b83241;
+}
+
 @media (min-width: 48rem) { /* Media query para 768px */
     #navHeader {
         flex-direction: row;
