--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,14 +1,25 @@
-#navHeader {
+nav{
     display: flex;
     flex-direction: column;
-    background-color: #3483fa;
-    padding: 1rem;
+    justify-content: space-around;
+    background-color: #658e14;
+    color: #fff;
+    padding: 1rem 2rem;
+    box-shadow: 0 0 3px 3px rgba(17, 17, 17, 0.26);
+
+    h1{
+        font-family: 'Simpson';
+        padding: 0;
+        margin: 0;
+    }
 }
+
 
 .logo-container {
     display: flex;
     justify-content: center;
     margin-bottom: 1rem;
+    gap: 1rem;
 }
 
 .logo-container img {
@@ -19,25 +30,31 @@
 .searchBox {
     display: flex;
     align-items: center;
+    gap: 1rem;
     margin-bottom: 1rem;
+    width: 40%;
 }
 
 .searchBox input[type="text"] {
     flex-grow: 1;
     padding: 0.8rem;
-    border-radius: 1rem;
-    border: none;
-    margin-right: 1rem;
-    width: 20rem; /* Ajusta el ancho del campo de búsqueda */
+    border: solid #b83241;
+    width: 100%; /* Ajusta el ancho del campo de búsqueda */
 }
 
 .searchBox button {
     padding: 0.8rem 2rem;
     border: none;
     border-radius: 1rem;
-    background-color: #59b9f1;
+    background-color: #c71717;
+    font-family: 'Simpson';
     color: white;
     cursor: pointer;
+}
+
+.searchBox button:hover{
+    background-color: #ecde1a;
+    color: black;
 }
 
 .links {
@@ -78,3 +95,5 @@
         margin-bottom: 0;
     }
 }
+
+
