--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Simpson';
+  src: local('Simpson'), url(./fonts/Simpsonfont.otf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./imagenes/generales/fondo-nubes-2.jpg');
 }
 
 code {
