--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -1,64 +1,87 @@
-.login-container {
-  position: relative;
+.register-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   height: 100vh;
   padding: 0 0 0 0;
-  background-image: url(../imagenes/logo.svg);
-  background-size: 25%;
-  background-repeat: repeat;
-  background-position:2%;
-  background-attachment: fixed;
+  background-image: url('../imagenes/generales/800px-Kwik-E-Mart.webp') ;
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: 100%;
 }
 
-.login-form {
+.register-form {
   display: flex;
   flex-direction: column;
-  background-color: black;
+  background-color: #FFF;
   height: 100%;
   width: 32%;
   box-shadow: 1px 15px 15px 0.5rem rgba(17, 17, 17, 0.925);
+
+  #logo{
+    height: 15%;
+    width:fit-content;
+    margin: 3rem auto 0;
+  }
 }
 
-.login-form form {
+.register-form form {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  padding-top: 2rem;
 }
 
-.login-form h1 {
-  color: #fff;
+.register-form h1 {
+  color: #b83241;
   font-size: 2rem;
   display: flex;
   justify-content: center;
   padding: 0;
-  margin-top: 27%;
 }
 
-.login-form label {
+.register-form label {
   display: block;
   width: 80%;
   margin-bottom: 0.5rem;
   font-weight: bold;
-  color: #fff;
+  color: #b83241;
   margin: auto;
 }
 
-.login-form input {
+.register-form input {
   height: 2.5rem;
   width: 87%;
   padding: 0 1rem;
   margin-top: 0.5rem;
   border: none;
   outline: none;
-  color: #fff;
+  color: #b83241;
   border-radius: 2rem;;
-  background: rgba(255, 255, 255, 0.123);
+  background: rgba(122, 116, 116, 0.541);
 }
 
-.login-form button {
+.register-form fieldset {
+  display: flex;
+  justify-content: left;
+  gap: 1rem;
+  width: 80%;
+  margin: 0.5rem auto;
+  border: none;
+  padding: 0;
+
+  .radiobutton-container {
+    display: flex;
+    font-size: medium;
+    align-items: center;
+
+    input {
+      height: 1.5rem;
+      margin: 0;
+    }
+  }
+}
+
+.register-form button {
   border: none;
   border-radius: 2rem;
   font-size: medium;
@@ -69,22 +92,24 @@
   transition: .3s;
   margin-top: 2rem;
   margin-left: 1.5rem;
+  background-color: #658e14;
+  color: #FFF;
 }
 
-.login-form button:hover {
+.register-form button:hover {
   background-color: rgba(200, 144, 253, 0.747);
   color: azure;
   box-shadow: 1px 5px 7px 1px rgba(255, 255, 255, 0.5);
 }
 
-.login-footer {
+.register-footer {
   width: 100%;
   padding: 1rem;
   text-align: center;
 }
 
-.login-footer p {
-  color: #fff;
+.register-footer p {
+  color: #b83241;
   font-size: medium;
   padding: 1.5rem;
 }
