--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -11,3 +11,15 @@ main{
         color: rgb(236, 218, 48);
     }
 }
+.product-container {
+    font-family: 'Simpson';
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 5%;
+  }
+  
+  #product-card {
+    width: 300px; /* Ajusta el ancho según tus preferencias */
+    margin: 10px; /* Añade un margen entre las tarjetas */
+  }
