--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,55 +1,47 @@
-/* Establece el tamaño de fuente base en el elemento <body> */
-body {
-    font-size: 16px; /* Tamaño de fuente base, ajusta según sea necesario */
-  }
-  
-  /* Aplica estilos al contenedor que envuelve las tarjetas de productos */
-  #product-cards-container {
-    display: flex;
-    flex-wrap: wrap; /* Permite que las tarjetas se envuelvan en múltiples líneas */
-    gap: 0.9rem;
-    justify-content: flex-start; /* Alinea las tarjetas al inicio del contenedor */
-  }
-  
-  /* Aplica estilos a las tarjetas de productos */
-  #product-card {
-    width: calc(25% - 0.675rem); /* Toma el 25% del ancho del contenedor y resta el espacio entre las tarjetas */
-    border: 0.1rem solid #ccc;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem; /* Agrega un margen inferior entre las tarjetas */
-    aspect-ratio: 1/1; /* Mantiene el aspecto cuadrado */
-    box-sizing: border-box; /* Incluye el borde en el cálculo del ancho */
-  }
-  
-  #product-image {
-    width: 100%; /* El ancho de la imagen ocupa el 100% del contenedor */
-    height: 100%; /* La altura de la imagen ocupa el 100% del contenedor */
-  }
-  
-  #product-details {
-    padding: 1rem;
-  }
-  
-  #product-name {
-    margin-top: 0;
-    margin-bottom: 0.5rem;
-  }
-  
-  #product-price {
-    font-weight: bold;
-    color: #007bff;
-    margin-bottom: 0.5rem;
-  }
-  
-  #add-to-cart-button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 0.5rem;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-  }
-  
-  #add-to-cart-button:hover {
-    background-color: #0056b3;
-  }
+#product-card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+#product-card:hover {
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+
+#product-image {
+  width: 100%;
+  border-radius: 8px;
+}
+
+#product-name {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-size: 1.2rem;
+}
+
+#product-description {
+  margin-bottom: 10px;
+}
+
+#product-price {
+  font-weight: bold;
+  color: #007bff;
+}
+
+#add-to-cart-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#add-to-cart-button:hover {
+  background-color: #0056b3;
+}
