--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -6,17 +6,18 @@
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
-}
-
-#product-card:hover {
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 450px; 
 }
 
 #product-image {
-  width: 100%;
+  width: 100%; /* Ajustar la imagen al ancho de su contenedor */
+  height: 200px; /* Altura fija para todas las imágenes */
+  object-fit: cover; /* Escalar la imagen manteniendo su relación de aspecto y cubriendo el contenedor */
   border-radius: 8px;
 }
-
 #product-name {
   margin-top: 10px;
   margin-bottom: 5px;
@@ -30,6 +31,10 @@
 #product-price {
   font-weight: bold;
   color: #007bff;
+}
+
+.add-to-cart-container {
+  margin-top: auto; /* Mueve el botón al final */
 }
 
 #add-to-cart-button {
