--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -3,13 +3,19 @@
   border-radius: 8px;
   padding: 20px;
   text-align: center;
-  background-color: #fff;
+  background-color: #eeeeee;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 450px; 
+  height: 450px;
+
+  a{
+    text-decoration: none;
+    color: black; 
+  }
+  
 }
 
 #product-image {
