--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
   src: local('Simpson'), url(./fonts/Simpsonfont.otf) format('truetype');
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,9 +18,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url('./imagenes/generales/fondo-nubes-2.jpg');
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Simpson';
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
