--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,25 +1,31 @@
+
 main{
+  z-index: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
-    width: 80%;
+    width: 70%;
     
     h1{
-        font-family: 'Simpson';
         color: rgb(236, 218, 48);
     }
 }
 .product-container {
-    font-family: 'Simpson';
+
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 5%;
+    padding-top: 2rem;
   }
   
   #product-card {
     width: 300px; /* Ajusta el ancho según tus preferencias */
     margin: 10px; /* Añade un margen entre las tarjetas */
+  }
+
+  footer{
+    margin-top: auto;
   }
