Guardando cambios locales antes de fusionar

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -22,6 +22,7 @@ select{
     font-family: 'Simpson';
     color: white;
     cursor: pointer;
+    margin-right: 10px;
 }
 .logo-container {
     display: flex;
