--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -91,6 +91,7 @@ select{
     margin-top: -5px; /* Ajusta el margen superior según sea necesario */
 }
 #Icono-carrito {
+    background-color: #658e14;
     width: 2rem;
     height: 2rem;
 }
@@ -174,4 +175,9 @@ select{
         text-decoration: none;
         cursor: pointer;
       }
+}
+
+#carritobtn{
+    background-color: #658e14;
+    border: none;
 }
