--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -6,7 +6,7 @@
     .dropbtnAc {
         font-family: 'Simpson';
         background-color: transparent;
-        color: white;
+        color: #ffffff;
         padding: 16px;
         font-size: 16px;
         border: none;
@@ -15,7 +15,7 @@
     .dropdown-content-Ac {
         display: none;
         position: absolute;
-        background-color: #658e14;
+        background-color: #ffffff;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
@@ -23,7 +23,7 @@
 }
 
 .dropdown-content-Ac a {
-    color: white;
+    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -31,20 +31,20 @@
 
 .dropdown-content-Ac button {
     width: 100%;
+    height: 45px;
     text-align: left;
     background-color: transparent;
-    color: #ffffff;
+    color: black;
     position: relative;
     display: table-column;
-    font-family: 'Simpson';
+    font-family: sans-serif;
+    font-size: 13px;
     margin: 0;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    border-left: none;
-    border-right: none;
+    border: none;
 } 
 .dropdown-content-Ac h4 {
     margin: 3%;
+    color: black;
 }
 
 
@@ -52,5 +52,5 @@
 
 .dropdown-content-Ac a:hover {background-color: #ddd; color: black;}
 .dropdownAc:hover .dropbtnAc {background-color: #658e14;}
-.config:hover {background-color: #355001;}
+.config:hover {background-color: #b8b8b8;}
 .signOut:hover {background-color: #b83241;}
