--- a/src/pages/Catalogo.css
+++ b/src/pages/Catalogo.css
@@ -1,5 +1,6 @@
 .catalogo-main {
     z-index: 0;
+    min-height: 85vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,6 +27,7 @@
 }
 .catalogo-container {
     background-color: white;
+    min-height:85vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
