--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -8,8 +8,10 @@
   transition: box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   height: 450px;
+  position: relative;
 
   a{
     text-decoration: none;
@@ -55,4 +57,16 @@
 
 #add-to-cart-button:hover {
   background-color: #0056b3;
+}
+
+#SIN-STOCK{
+  width: 65%;
+  top: 25%;
+  display: inline-block;
+  padding: 0.5rem;
+  margin: 0;
+  color: #ecde1a;
+  background-color: #b83241;
+  border: solid #ecde1a;
+  border-radius: 1rem;
 }
