--- a/src/components/RoundedCarrousel.css
+++ b/src/components/RoundedCarrousel.css
@@ -1,5 +1,5 @@
 .reviewsContainer {
-    margin-top: 120px;
+    margin-top: 2rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
