--- a/src/components/TableProductos.css
+++ b/src/components/TableProductos.css
@@ -1,4 +1,51 @@
-table{
+.admin-container{
+    text-align: center;
+}
+
+.admin-product-container{
+    .admin-image-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30%;
+        height: 80%;
+
+        img{
+            width: 100%;
+            max-height: 100%;
+            box-shadow: 0 0 3px 3px rgba(17, 17, 17, 0.377);
+        }
+    }
+
+    #boton-desactivador{
+        font-family: 'Simpson';
+        border: solid black;
+        padding: 1rem;
+        background-color: #658e14;
+        color: #ecde1a;
+        border-radius: 1.2rem;
+
+    }
+
+    #TABLE-INFO{
+        width: 100%;
+
+        input{
+            width: 100%;
+            border: none;
+            padding: 0.5rem;
+            font-size: medium;
+            font-weight: bold;
+        }
+        p{
+            margin: 0;
+            font-size: medium;
+            padding: 0.5rem;
+        }
+    }
+}
+
+#TABLE-GENERAL{
     width: 100%;
     border-collapse: collapse;
 
@@ -8,9 +55,13 @@ table{
         
         th {
             background-color: #658e14;
-            text-align: left;
+            text-align: center;
             padding: 1rem;
         }
+    }
+
+    .sin-stock{
+        background-color: #fc744a70;
     }
     
     td {
@@ -24,71 +75,39 @@ table{
     background-color: rgba(247, 247, 247, 0.733);
 }
 
-.active{
-    background-color: #c9fc6323;
-    width: 100%;
-    border: solid #658e14;
-}
-
-
-.admin-product-container{
-    margin-top: 1rem;
-    border: solid #b83241;
-    background-color: rgb(226, 226, 226);
-    width: 80%;
-    max-width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+#ACEPTAR-BTN {
+    font-family: 'Simpson';
+    border: solid black;
     padding: 1rem;
-
-    .product-image-container{
-        height: 35vh;
-        background-color: white;
-        border: solid black;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 1rem;
-
-        img{
-            height: 100%;
-        }
-    }
-
-    .product-information{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: black;
-        padding: 1rem;
-        
-        h1{
-            font-size: 2rem;
-            color: black;
-        }
-
-        #ADDTOCART{
-            background-color: #b83241;
-            color: white;
-            padding: 0.5rem 0;
-            font-size: large;
-            font-family: 'Simpson';
-            border-radius: 1rem;
-            width: 100%;
-        }
-
-        #ADDTOCART:hover{
-            background-color: #ecde1a;
-            color: black;
-        }
-    }
+    margin-top: 1rem;
+    background-color: #658e14;
+    color: #ecde1a;
+    border-radius: 1.2rem;
+    width: 100%;
+    padding: 0.5rem 0;
+    font-size: medium;
 }
 
-.admin-product-activo{
-    position: absolute;
-    margin-top: 0;
+#ACEPTAR-BTN:hover{
+    background-color: #ecde1a;
+    color: #000000;
 }
+
+.producto-info-admin{
+    width: 40%;
+}
+
+.left-header{
+    width: 25%;
+    background-color: #658e14;
+}
+
+.right-datacell{
+    width: 75%;
+
+}
+
+
 
 
 
