--- a/src/pages/Producto.css
+++ b/src/pages/Producto.css
@@ -72,6 +72,8 @@
         display: flex;
         gap: 0.5rem;
         padding: 0.5rem 1rem;
+        justify-content: center; /* Centra horizontalmente */
+        align-items: center; /* Centra verticalmente */
 
         button{
             padding: 0.5rem;
@@ -83,6 +85,7 @@
         }
 
         p{
+            justify-content: center;
             margin: 0 0.5rem;
         }
     }
