--- a/src/components/PaymentModal.css
+++ b/src/components/PaymentModal.css
@@ -22,19 +22,6 @@
     position: relative;
   }
   
-  .close {
-    color: #ffffff;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
   
   input {
     width: 100%;
@@ -60,3 +47,20 @@
   button:hover {
     background-color: #0056b3;
   }
+
+  .close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    color: #000;
+  }
+  
+  .close-button:hover {
+    color: #ff0000;
+    background-color: transparent;
+  }
+  
