--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,6 +6,7 @@ footer{
     justify-content: space-around;
     align-items: center;
     font-family: 'Simpson';
+    padding: 0.5rem 0;
     
     h1{
         font-size: 1rem;
