--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -20,10 +20,14 @@
   box-shadow: 1px 15px 15px 0.5rem rgba(17, 17, 17, 0.925);
 
   #logo{
-    height: 15%;
     width:fit-content;
     margin: 3rem auto 0;
   }
+}
+
+.login-form #linkToHome {
+  display: flex;
+  height: 20%;
 }
 
 .login-form form {
