--- a/src/components/NewProd.css
+++ b/src/components/NewProd.css
@@ -1,10 +1,113 @@
-#NewProd-Conteiner {
-    align-content: center;
-}
-#NewBox {
-    
-}
-
-#formNewProd {
+.modal {
     display: flex;
-}
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content {
+    background-color: #658e14;
+    padding: 20px;
+    border-radius: 5px;
+    width: 70%;
+    max-width: 90%;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  .modal-content h1{
+    text-align: center;
+    margin: auto;
+    margin-bottom: 40px;
+
+  }
+
+  .modal-content span {
+    width: 10%;
+  }
+
+  .modal-content span:hover {
+    color: #b83241;
+    
+  }
+  
+  .close {
+    float: right;
+    font-size: 3rem;
+    cursor: pointer;
+  }
+
+  .form-grid {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .form-group {
+    flex: 1 1 50%; 
+    padding-right: 10px; 
+  }
+  
+  #CONFIRMAR-BTN {
+    font-family: 'Simpson';
+    border: solid black;
+    padding: 1rem;
+    margin-top: 1rem;
+    margin-left: 25%;
+    background-color: #b83241;
+    color: white;
+    border-radius: 1.2rem;
+    width: 50%;
+    padding: 0.5rem 0;
+    font-size: medium;
+  }
+  
+  #CONFIRMAR-BTN:hover {
+    background-color: #ecde1a;
+    color: #000000;
+  }
+
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  
+  input[type='text'],
+  input[type='number'],
+  select {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: white;
+    color: black;
+    margin-top: 5px;
+  }  
+
+  .select-style {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  input[type='file'] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: white;
+    color: black;
+    margin-top: 5px;
+  }
