--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,7 @@ header{
     padding: 1rem 2rem;
     box-shadow: 0 0 3px 3px rgba(17, 17, 17, 0.377);
     position:relative;
+    align-items: center;
 
     a{
         text-decoration: none;
